# StealthRelay

./: .dockerignore  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.archlinux  LICENSE  README.md  fly.toml  railway.json  render.yaml
.do/: app.yaml
.github/: dependabot.yml
.github/workflows/: release.yml  web-client.yml
config/: default.toml
crates/stealthos-core/: Cargo.toml
crates/stealthos-core/src/: error.rs  lib.rs  message.rs  pool.rs  pool_registry.rs  ratelimit.rs  router.rs  server_frame.rs  types.rs
crates/stealthos-crypto/: Cargo.toml
crates/stealthos-crypto/src/: envelope.rs  error.rs  handshake.rs  identity.rs  invitation.rs  lib.rs  peer_identity.rs  pow.rs  serde_helpers.rs
crates/stealthos-observability/: Cargo.toml
crates/stealthos-observability/src/: health.rs  lib.rs  logging.rs  metrics.rs
crates/stealthos-server/: Cargo.toml
crates/stealthos-server/src/: app.rs  claim.rs  config.rs  handler.rs  lib.rs  main.rs  setup.rs
crates/stealthos-server/src/tunnel/: cidr.rs  dns.rs  mod.rs  stream.rs
crates/stealthos-server/tests/: integration.rs
crates/stealthos-transport/: Cargo.toml
crates/stealthos-transport/src/: config.rs  connection.rs  connection_registry.rs  error.rs  lib.rs  listener.rs  server.rs  types.rs
docker/: .env.example  docker-compose.cloudflared.yml  docker-compose.yml
scripts/: e2e-test.sh  install.ps1  install.sh
web-client/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
web-client/public/: manifest.json  sw.js
web-client/src/: App.tsx  index.css
web-client/src/calling/: audio-capture.ts  audio-playback.ts  audio-worklet-processor.ts  avcc.ts  call-manager.ts  frame-codec.ts  types.ts  video-capture.ts  video-playback.ts
web-client/src/components/: ChatInput.tsx  ChatNotification.tsx  ConnectionStatus.tsx  EmojiPicker.tsx  GameChatOverlay.tsx  GameInvitationBanner.tsx  MessageBubble.tsx  PeerAvatar.tsx  PeerList.tsx  ProfileSetup.tsx  QRScanner.tsx  ThemeToggle.tsx
web-client/src/crypto/: encryption.ts  identity.ts  invitation.ts  pow.ts  pow.worker.ts  sealed-card.ts
web-client/src/hooks/: useNotifications.ts  useTheme.ts
web-client/src/protocol/: constants.ts  frames.ts  messages.ts
web-client/src/stores/: call.ts  chat.ts  connection.ts  game.ts  pool.ts
web-client/src/transport/: websocket.ts
web-client/src/utils/: base64.ts  hex.ts  time.ts  uuid.ts
web-client/src/views/: CallView.tsx  ChatView.tsx  JoinView.tsx  LobbyView.tsx
web-client/src/views/games/: ChainReaction.tsx  Chess.tsx  ConnectFour.tsx  GameLobby.tsx  Ludo.tsx
