[package]
name = "stealthos-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core domain logic for StealthOS Relay — pool management, message routing, rate limiting"

[dependencies]
# stealthos-crypto.workspace = true  # TODO: re-enable after crypto crate compiles
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
dashmap.workspace = true
tracing.workspace = true
tokio.workspace = true
rand.workspace = true
bytes.workspace = true
base64ct.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
