[package]
name = "stealthos-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cryptographic primitives for StealthOS Relay — identity, key exchange, encryption, invitation tokens"

[dependencies]
x25519-dalek.workspace = true
ed25519-dalek.workspace = true
chacha20poly1305.workspace = true
aes-gcm.workspace = true
hkdf.workspace = true
sha2.workspace = true
hmac.workspace = true
blake2.workspace = true
subtle.workspace = true
rand.workspace = true
rand_chacha.workspace = true
zeroize.workspace = true
base64ct.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
