[package]
name = "stealthos-observability"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Observability layer for StealthOS Relay — structured logging, metrics, health checks"

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tower.workspace = true
